= Asciimath Changelog

== 1.0.8

Bug fixes::

  * Issue #9 and #10: Resolve compatibility issues with TruffleRuby

== 1.0.7

Bug fixes::

  * Issue #6: Mark standard functions as identifiers instead of operators
  * Issue #7: Correct parsing of TeX altenative style (`text()`) text strings

== 1.0.6

Bug fixes::

  * Resolve 'undefined variable' error when parsing empty `paren` expressions (@tuttieee)

== 1.0.5

Enhancements::

  * Add experimental HTML output (@Tobski)

== 1.0.4

Enhancements::

  * Add support for AsciiMath font commands

== 1.0.3

Bug Fixes::

  * Issue #2: Correctly parse input strings containing multi-byte characters.

== 1.0.2

  Bug Fixes::

  * Issue #1: Resolve uninitialized instance variable warning

== 1.0.1

Enhancements::

  * Make AsciiMath compatible with Ruby 1.8

== 1.0.0

Initial release::

  * An AsciiMath parser and MathML converter written in Ruby